--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "msw": "^2.2.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.22.3",
     "valtio": "^1.13.2",
     "zod": "^3.22.4",
