--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.26.18",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "jotai": "^2.8.0",
@@ -27,6 +28,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.26.18",
+    "@tanstack/router-vite-plugin": "^1.26.16",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
