--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.43.0",
     "@tanstack/router-devtools": "^1.26.18",
     "@tanstack/router-vite-plugin": "^1.26.16",
+    "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
