--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start-api": "json-server --watch db.json --port 3001",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "concurrently npm:start npm:playwright:codegen",
+    "playwright:codegen": "playwright codegen"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.26.18",
