--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "playwright:codegen": "playwright codegen"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.0",
     "@tanstack/react-router": "^1.26.18",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
