--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.0",
+    "@tanstack/react-query-devtools": "^5.29.0",
     "@tanstack/react-router": "^1.26.18",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
